# vinix

./: README.md  flake.nix  pyproject.toml
vinix/: __main__.py  print_treemap.R
