[tool.poetry]
name = "vinix"
version = "0.1.0"
description = "Simple tooling to visualize nix derivations dependencies as a treemap or a graph."
authors = ["Faure Adrien <adrien.faure2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
numpy = "^1.21.4"
matplotlib = "^3.4.3"
squarify = "^0.4.3"
isort = "^5.10.0"
pandas = "^1.3.4"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.10b0"

[tool.poetry.scripts]
vinix = 'vinix.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"